# ucrm_mikrotik_sync

./: .gitignore  README.md  UNMS-UCRM Class Diagram  customer.py  pyproject.toml  requirements.txt  run_sync.sh  ucrm_api.py  ucrm_api_multi-site.py  uisp_sync.py
mikrotik/: __init__.py  mikrotik.py
uisp/: __init__.py  uisp_client.py
working_docs/: customer.py
