[tool.poetry]
name = "uisp-mikrotik-sync"
version = "0.1.0"
description = "Sync UISP Service Plans to MikroTik Queues"
authors = ["bile0026 <zacharybiles@gmail.com>"]
readme = "README.md"
packages = [{include = "uisp_mikrotik_sync"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
diffsync = "^1.7.0"
routeros-api = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
